app/scss/sections/_turnkey.scss
@use "../base/breakpoints" as *;

.turnkey {
  @include breakpoint(lg-tablet) {
    background-position: center 15%;
    background-size: 900px;
  }

  .animation {
    position: relative;
    z-index: -1;
    opacity: 0.75;

    &__container {
      position: absolute;
      top: -70px;
      left: 50%;
      transform: translateX(-50%);

      @include breakpoint(md-tablet) {
        transform: translateX(-60%);
      }

      @include breakpoint(sm-tablet) {
        transform: translateX(-100%);
      }
    }

    .grid-lines {
      fill: none;
      stroke: var(--blue-gray-100);
      stroke-miterlimit: 10
    }
  }

  // animated stars on the background grid if the browser supports it
  @supports (offset-path: inherit) {
    .star {
      width: 40px;
      height: 2px;
      background: linear-gradient(270deg, var(--blue-500), transparent);
      border-radius: 0;
      offset-distance: 0;
      animation: rising-star 5s ease-in infinite;
      opacity: 0;
    }

    .star-1 {
      offset-path: path("M480.5 700 L480.5 100");
      animation-delay: 2s;
    }

    .star-2 {
      offset-path: path("M320.5 700 L320.5 100");
      animation-delay: 0;
    }

    .star-3 {
      offset-path: path("M240.5 700 L240.5 100");
      animation-delay: 1s;
    }

    .star-4 {
      offset-path: path("M160.5 700 L160.5 100");
      animation-delay: 0.3s;
    }

    .star-5 {
      offset-path: path("M400.5 700 L400.5 100");
      animation-delay: 1.2s;
    }

    .star-6 {
      offset-path: path("M560.5 700 L560.5 100");
      animation-delay: 0.75s;
    }

    @keyframes rising-star {
      0% {
        offset-distance: 0;
        motion-offset: 0;
        opacity: 0;
      }

      50% {
        opacity: 50%;
      }

      80% {
        offset-distance: 100%;
        motion-offset: 100%;
        opacity: 0;
      }
    }
  }

  &__header {
    @include breakpoint(lg-tablet) {
      text-align: center;
    }

    h1 {
      line-height: 0.9;
    }

    p {
      font-size: 1.1rem;
      line-height: 1.5;
      color: var(--blue-gray-500);

      @include breakpoint(lg-tablet) {
        font-size: 1rem;
      }

      @include breakpoint(sm-tablet) {
        font-size: .8rem;
      }
    }
  }

  &__mining {
    line-height: .85;

    @include breakpoint(lg-tablet) {
      text-align: center;
    }

    h2 {
      font-family: var(--medium-wide-font);
      font-size: 1.3rem;
      font-weight: 100;
      text-transform: uppercase;
      letter-spacing: 0.5px;

      @include breakpoint(sm-tablet) {
        font-size: 1rem;
        line-height: 1.2;
      }
    }

    h3 {
      font-family: var(--heavy-compact-font);
      font-size: 10rem;
      letter-spacing: -4px;
      text-transform: uppercase;
      color: var(--blue-500);

      @include breakpoint(md-tablet) {
        font-size: 7rem;
      }

      @include breakpoint(sm-tablet) {
        font-size: 5rem;
        letter-spacing: -3px;
      }
    }
  }

  &__watt-price {
    display: flex;
    align-items: center;
    align-self: center;
    gap: 1rem;
    padding: 1rem;
    border: 1px solid var(--blue-gray-200);
    border-radius: 10px;
    background-color: var(--blue-gray-50);
    box-shadow: var(--shadow-elevation-medium);
    animation: float 5s infinite forwards;
    cursor: default;

    @keyframes float {
      0% {
        transform: translateY(0);
      }

      50% {
        transform: translateY(-10px);
      }

      100% {
        transform: translateY(0);
      }
    }

    img {
      width: 60px;

      @include breakpoint(sm-tablet) {
        width: 50px;
      }

      @include breakpoint(sm-mobile) {
        width: 40px;
      }
    }

    h4 {
      font-family: var(--medium-wide-font);
      font-size: 3rem;
      line-height: 1;
      letter-spacing: 1px;

      @include breakpoint(sm-tablet) {
        font-size: 2rem;
      }

      @include breakpoint(sm-mobile) {
        font-size: 1.5rem;
      }
    }

    small {
      font-size: 1rem;

      @include breakpoint(sm-tablet) {
        font-size: 0.8rem;
      }

      @include breakpoint(sm-mobile) {
        font-size: 0.7rem;
      }
    }

    span {
      font-family: var(--light-wide-font);
      margin-left: .2rem;
      letter-spacing: 1px;
      text-transform: uppercase;

      @include breakpoint(sm-tablet) {
        font-size: 0.8rem;
      }

      @include breakpoint(sm-mobile) {
        letter-spacing: .5px;
        font-family: var(--medium-wide-font);
        font-size: 0.6rem;
      }
    }
  }

  &__grid {
    display: grid;
    padding-top: 3rem;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 1rem;

    @include breakpoint(lg-tablet) {
      grid-template-columns: repeat(2, 1fr);
    }

    @include breakpoint(sm-tablet) {
      grid-template-columns: repeat(1, 1fr);
    }

    &-item {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      cursor: default;
      padding: 1rem;
      border: 1px solid var(--blue-gray-100);
      background-color: var(--blue-gray-50);
      border-radius: 10px;
      transition: all 150ms ease-out;

      &:hover {
        transform: translateY(-5px);
        border: 1px solid var(--blue-500);
        box-shadow: var(--shadow-elevation-high);
      }
    }

    img {
      width: 48px;
      height: 48px;
      object-fit: cover;
    }

    p {
      font-size: .9rem;
      color: var(--blue-gray-600);
    }
  }

  &__pricing {
    margin-top: 1rem;
    padding: 1rem 1.5rem 1.5rem;
    border: 1px solid var(--blue-gray-100);
    border-radius: 10px;
    background-color: var(--blue-gray-50);
    transition: all 150ms ease-out;

    &:hover {
      transform: translateY(-5px);
      border: 1px solid var(--blue-500);
      box-shadow: var(--shadow-elevation-high);
    }

    h5 {
      @include breakpoint(lg-tablet) {
        text-align: center;
      }
    }

    h2 {
      font-size: 5rem;
      font-weight: 900;
      line-height: .7;
      margin-top: 1rem;
      letter-spacing: -.5px;

      color: var(--blue-500);

      @include breakpoint(sm-tablet) {
        font-size: 3rem;
      }
    }
  }

  &__cta {
    margin-top: 2rem;
    text-align: center;

    h3 {
      margin-top: 2rem;
      font-family: var(--medium-font);
      position: relative;
      letter-spacing: .2px;
      text-transform: uppercase;

      color: var(--blue-500);
    }

    h4 {
      margin-top: 0.5rem;
      font-size: 0.8rem;
      color: var(--blue-gray-600);
      letter-spacing: 0.1px;
    }
  }
}

